fixed form button appearance on iOS

--- a/css/screen.css
+++ b/css/screen.css
@@ -74,6 +74,7 @@ input.textinput {
 }
 
 input.button {
+	-webkit-appearance: none;
 	cursor: pointer;
 	background-color: #8378c7;
 }
